Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>EL:DIABLO by openeventdata</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>EL:DIABLO</h1>
-        <p>Event data in a box, basically.</p>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-        <p class="view"><a href="https://github.com/openeventdata/eldiablo">View the Project on GitHub <small>openeventdata/eldiablo</small></a></p>
+  <title>EL:DIABLO</title>
+  <meta name="description" content="Event data in a box, basically.">
 
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <ul>
-          <li><a href="https://github.com/openeventdata/eldiablo/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/openeventdata/eldiablo/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/openeventdata/eldiablo">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p><a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo"></a></p>
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">EL:DIABLO</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Event data in a box, basically.</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/AABoyles/eldiablo/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/AABoyles/eldiablo/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/AABoyles/eldiablo" class="code">View EL:DIABLO on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p><a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo"></a></p>
 
 <p>Event data in a box, basically.</p>
 
 <h2>
-<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
+<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
 
 <p>The main goal of EL:DIABLO is to overcome <a href="https://en.wikipedia.org/wiki/Dependency_hell">dependency hell</a>
 and make it much easier for the end user to get up and running with event data
@@ -42,108 +50,142 @@ share the setup we use to develop the tools and software for creating and
 working with event data. In short, no matter what hardware or operating system
 a user chooses, it is possible to replicate our exact event-data coding
 platform on that specific configuration. This goal is important to us for two
-primary reasons. First, we are striving to make the generation of event data
-more open than it has historically been. Things such as copyright and licensing
-agreements make it difficult to share source texts for coded event data, but we
-<strong>can</strong> make the <strong>process</strong> as transparent as possible. This is especially
-important since there are a multitude of seemingly minor choices that go into
-event data coding that can have a significant impact on the final product. The
-second reason we are pursuing EL:DIABLO as a project is to enable
-collaboration. It will no longer be unclear what steps are taken to generate
-event data, or what the various moving pieces within the system are. If someone
-wishes, for example, to develop a new event coder, they can simply drop that in
-to the existing pipeline. The same holds for the various dictionaries,
-geocoders, web scrapers, etc. It's like Legos. But for event data.</p>
+primary reasons.</p>
+
+<p>First, we are striving to make the generation of event data more open than it
+has historically been. Things such as copyright and licensing agreements make
+it difficult to share source texts for coded event data, but we <strong>can</strong> make
+the <strong>process</strong> as transparent as possible. This is especially important since
+there are a multitude of seemingly minor choices that go into event data
+coding that can have a significant impact on the final product. </p>
+
+<p>Second, we are pursuing EL:DIABLO to enable collaboration. It will no longer be
+unclear what steps are taken to generate event data, or what the various moving
+pieces within the system are. If someone wishes, for example, to develop a new
+event coder, they can simply drop that in to the existing pipeline. The same
+holds for the various dictionaries, geocoders, web scrapers, etc. It's like
+Legos. But for event data.</p>
 
 <h2>
-<a name="components" class="anchor" href="#components"><span class="octicon octicon-link"></span></a>Components</h2>
+<a id="components" class="anchor" href="#components" aria-hidden="true"><span class="octicon octicon-link"></span></a>Components</h2>
 
-<p>On the technical side of things, EL:DIABLO provides the information and scripts
-necessary to set up a <a href="https://en.wikipedia.org/wiki/Virtual_machine">virtual machine</a>
-on a user's computer. For those not familiar, this can be thought of as a
-computer within a computer. EL:DIABLO relies on <a href="https://www.vagrantup.com/">Vagrant</a>,
-and by extension <a href="https://www.virtualbox.org/">VirtualBox</a>, to set up this
-virtual environment. These two pieces of software allow for the easy setup and
-use of a virtual machine. Thus, two of the files contained within EL:DIABLO are
-a <code>Vagrantfile</code>, which gives instructions to Vagrant on how to setup the virtual
-machine, and <code>bootstrap.sh</code>, which is a <a href="https://en.wikipedia.org/wiki/Shell_script">shell script</a>
-that installs the necessary software within the virtual machine.</p>
+<p>On the technical side of things, EL:DIABLO provides the scripts to configure
+any computer running any variant of Ubuntu to begin generating event data. The
+primary component of EL:DIABLO is a <a href="https://en.wikipedia.org/wiki/Shell_script">shell script</a> called <code>bootstrap.sh</code>, which
+installs all of the necessary software.</p>
+
+<p>For computers that aren't running Ubuntu or any of its derivitives (or
+computers that you just don't want to run the risk of messing up), This
+repository also contains the configuration files necessary to set up a
+<a href="https://en.wikipedia.org/wiki/Virtual_machine">virtual machine</a> using
+<a href="https://www.vagrantup.com/">Vagrant</a> (and by extension <a href="https://www.virtualbox.org/">VirtualBox</a>), to set up this virtual environment.</p>
 
 <p>The EL:DIABLO event coding platform is comprised of two primary applications:
-a web scraper and a processing pipeline (<a href="https://github.com/openeventdata/scraper"><code>scraper</code></a> and
-<a href="https://github.com/openeventdata/phoenix_pipeline"><code>phoenix_pipeline</code></a> specifically). The scraper is a simple web scraper that
-makes use of a whitelist of RSS feeds to pull stories from popular news
-outlets. The pipeline moves the news stories from storage in a database to the
-event coder, such as TABARI or PETRARCH, and outputs event data. More
-information about the details of these projects can be found in their
-respective documentation, linked to above. If you use the standard
-<code>bootstrap.sh</code> script provided with EL:DIABLO, the web scraper will run once an
-hour, and the pipeline will run once a day at 01:00.</p>
+a web scraper and a processing pipeline (<a href="https://github.com/openeventdata/scraper"><code>scraper</code></a>
+and <a href="https://github.com/openeventdata/phoenix_pipeline"><code>phoenix_pipeline</code></a>
+specifically). The scraper is a simple web scraper that uses a whitelist of RSS
+feeds to pull stories from popular news outlets. The pipeline moves the news
+stories from storage in a database to the event coder, such as TABARI or
+PETRARCH, and outputs event data. More information about the details of these
+projects can be found in their respective documentation, linked to above. If
+you use the standard <code>bootstrap.sh</code> script provided with EL:DIABLO, the web
+scraper will run once an hour, and the pipeline will run once a day at 01:00.</p>
 
 <h2>
-<a name="setting-up" class="anchor" href="#setting-up"><span class="octicon octicon-link"></span></a>Setting up</h2>
+<a id="setting-up" class="anchor" href="#setting-up" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setting up</h2>
+
+<h3>
+<a id="installation-on-a-virtual-machine-with-vagrant" class="anchor" href="#installation-on-a-virtual-machine-with-vagrant" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation on a Virtual Machine with Vagrant</h3>
 
 <p>As mentioned above, EL:DIABLO relies on Vagrant and VirtualBox for most of the
-heavy lifting. This means that the only things that
-a user needs to install on their local machine are these two pieces of
-software. The creators of this software describe the install process better
-than we can, so a user should look <a href="https://www.vagrantup.com/downloads.html">here</a>
-for Vagrant and <a href="https://www.virtualbox.org/wiki/Downloads">here</a>
-for VirtualBox. Once that software is installed, EL:DIABLO needs to be
-downloaded from the <a href="https://github.com/openeventdata/eldiablo">Github repository</a>.
-For those familiar with <code>git</code>, a <code>git clone</code> should work fine. For those
-unfamiliar with <code>git</code>, it is possible to download the repository as a zip file
-as shown in the picture below.</p>
+heavy lifting. This means that the only things that a user needs to install on
+their local machine are these two pieces of software. The creators of this
+software describe the install process better than we can, so a user should look
+<a href="https://www.vagrantup.com/downloads.html">here</a> for Vagrant and <a href="https://www.virtualbox.org/wiki/Downloads">here</a> for VirtualBox. Once that software
+is installed, EL:DIABLO needs to be downloaded from the <a href="https://github.com/openeventdata/eldiablo">Github repository</a>. For those familiar with <code>git</code>, a
+<code>git clone</code> should work fine. For those unfamiliar with <code>git</code>, it is possible
+to download the repository as a zip file as shown in the picture below.</p>
+
+<p><em>Note: We've tested this setup on Vagrant 1.6.5</em></p>
 
 <p><a href="http://i.imgur.com/YTT6Ppy.png" title="Github example"><img src="http://i.imgur.com/YTT6Ppy.png" alt="Github" title="Github example"></a></p>
 
-<p>Once this file is downloaded and unzipped, you should use the command line to cd into the
-directory and do <code>vagrant up</code>. This will take awhile to download the operating system image
-(this will only be done once) and then install the relevant software within the virtual
-machine. Seriously, this is going to take time; the process hasn't stalled out. Then <code>vagrant ssh</code>
-to get into the box. You're now in the virtual machine. Overall, this should look something like:</p>
+<p>Once this file is downloaded and unzipped, you should use the command line to
+<code>cd</code> into the directory and do <code>vagrant up</code>. This will take awhile to download
+the operating system image(this will only be done once) and then install the
+relevant software within the virtual machine. Seriously, this is going to take
+time; the process hasn't stalled out. Then <code>vagrant ssh</code>to get into the box.
+You're now in the virtual machine. Overall, this should look something like:</p>
 
 <p><a href="http://i.imgur.com/UJtjy3N.png" title="Terminal example"><img src="http://i.imgur.com/UJtjy3N.png" alt="Shell" title="Terminal example"></a></p>
 
 <p><a href="http://i.imgur.com/206UtDs.png" title="Second terminal example"><img src="http://i.imgur.com/206UtDs.png" alt="Shell" title="Second terminal example"></a></p>
 
 <p>As a note, all of this will create a folder somewhere on your local machine
-that contains the operating system images. On OSX it's in the home directory and
-named <code>VirtualBox VMs</code>. </p>
+that contains the operating system images. On OSX it's in the home directory
+and named <code>VirtualBox VMs</code>. </p>
 
-<p>To get out of the virtual machine, type <code>exit</code>, which will bring you back to your local machine.
-There are three methods for ending the Vagrant box: <code>vagrant suspend</code>, <code>vagrant halt</code>, and
-<code>vagrant destroy</code>. The main difference between these three is the amount of
-system resources used while in the "down" state. If you are completely done
-with the virtual machine, and do not wish to keep any of the data, make use of
-<code>vagrant destroy</code>. Again, this <em>will remove</em> all of the data within the virtual
-machine and all software will have to be reinstalled. If you wish to just
-temporarily bring down the virtual machine, the other two commands should be
-explored in the <a href="https://docs.vagrantup.com/v2/getting-started/teardown.html">Vagrant documentation</a>.</p>
+<p>To get out of the virtual machine, type <code>exit</code>, which will bring you back to
+your local machine. There are three methods for ending the Vagrant box:
+<code>vagrant suspend</code>, <code>vagrant halt</code>, and<code>vagrant destroy</code>. The main difference
+between these three is the amount of system resources used while in the "down"
+state. If you are completely done with the virtual machine, and do not wish to
+keep any of the data, make use of<code>vagrant destroy</code>. Again, this <em>will remove</em>
+all of the data within the virtual machine and all software will have to be
+reinstalled. If you wish to just temporarily bring down the virtual machine,
+the other two commands should be explored in the <a href="https://docs.vagrantup.com/v2/getting-started/teardown.html">Vagrant documentation</a>.</p>
+
+<h3>
+<a id="installation-on-a-bare-machine" class="anchor" href="#installation-on-a-bare-machine" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation on a bare machine</h3>
+
+<p><em>THIS IS NOT THE RECOMMENDED APPROACH.</em></p>
+
+<p>You can use the bootstrap shell script to set up the environment on a machine
+running Ubuntu. It may work on Debian and other debian-derivitive distributions
+using apt as their package managers, but these have not been tested.</p>
+
+<p>To run the bootstrap script, fire up a terminal and pipe the script straight
+into bash, like so:</p>
+
+<pre><code>curl https://raw.githubusercontent.com/AABoyles/eldiablo/master/bootstrap.sh | bash
+</code></pre>
+
+<p>It should demand your password once, and then run everything requiring
+superuser access as superuser, and everything else as whatever user you're
+logged in as.  It uses relative paths, so you should be able to install it
+just about anywhere on the filesystem, as suits your preferences.</p>
 
 <h2>
-<a name="other-information" class="anchor" href="#other-information"><span class="octicon octicon-link"></span></a>Other Information</h2>
+<a id="other-information" class="anchor" href="#other-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other Information</h2>
 
-<p>Due to the way Vagrant sets up the virtual machine, it is necessary to prepend nearly
-every command with <code>sudo</code>.</p>
-
-<p>The <code>bootstrap.sh</code> script is specifically configured for use with the Vagrant
-box, but with slight modifications can be used on any Linux box (it's what we
-use to bootstrap our machines). This means that the script can serve as the
-basis for setting up a high-performance computer running EL:DIABLO, an
-individual's laptop, etc. </p>
+<p>Currently the virtual machine takes up 4GB of RAM. Less than this doesn't
+really work since the shift-reduce parser needs a fair amount of memory to
+operate.</p>
 
 <p>For the two Github repositories, <code>scraper</code> and <code>phoenix_pipeline</code>, each time
 <code>vagrant up</code> is run the most recent version of the code is pulled from Github.
 If you have a long-running virtual machine and wish to obtain the latest code,
-you can <code>cd</code> into the appropriate directory and run <code>sudo git pull</code>. </p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/openeventdata">openeventdata</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+you can <code>cd</code> into the appropriate directory and run <code>git pull</code>.</p>
+        </article>
+      </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/AABoyles" class="avatar"><img src="https://avatars3.githubusercontent.com/u/351239?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/AABoyles">AABoyles</a> maintains <a href="https://github.com/AABoyles/eldiablo">EL:DIABLO</a></p>
+
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/AABoyles/eldiablo/tarball/master" class="tar">tar</a><a href="https://github.com/AABoyles/eldiablo/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
