--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">EL:DIABLO</h1>
+      <a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo"></a>
     </header>
     <div id="container">
       <p class="tagline">Event data in a box, basically.</p>
@@ -36,7 +36,6 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p><a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo"></a></p>
 
 <p>Event data in a box, basically.</p>
 
