Oops, forgot to set image width.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo"></a>
+      <a href="https://i.imgur.com/3R7gtyr.png" title="EL:DIABLO logo"><img src="https://i.imgur.com/3R7gtyr.png" alt="Logo" title="EL:DIABLO logo" width="675";></a>
     </header>
     <div id="container">
       <p class="tagline">Event data in a box, basically.</p>
